--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>clock</title>
+    <title>web_sketch_note</title>
   </head>
   <body>
     <div id="canvas-container"></div>
+    <div id="switcher-container">
+      <select id="switcher"></select>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
